test/cases/errors/load-module-error/infrastructure-log.js
module.exports = [
	/^Pack got invalid because of write to: Compilation\/modules|json.+error-loader\.js!/
];
